k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-feed
  labels:
    app: twitter-feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter-feed
  template:
    metadata:
      labels:
        app: twitter-feed
    spec:
      imagePullSecrets:
      - name: headless-commerce-package-access-token
      containers:
      - name: twitter-feed
        image: ghcr.io/headless-commerce/twitter_feed
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /health/live
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: twitter-feed
  labels:
    app: twitter-feed
    release: kube-prometheus-stack
spec:
  ports:
  - name: web
    port: 80
    targetPort: 4000
  selector:
    app: twitter-feed
