k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-feed
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - twitterfeed.moview.com.ng
    secretName: moview-com-ng
  rules:
  - host: twitterfeed.moview.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twitter-feed
            port:
              number: 80
